//
//  HomeViewController.m
//  GitHubSearch
//
//  Created by alanc on 08/09/2019.
//  Copyright © 2019 刘文楠. All rights reserved.
//

#import "HomeViewController.h"

@implementation HomeViewController

-(void)viewDidLoad{
    self.title = @"GitHubSearch";
    self.view.backgroundColor = [UIColor whiteColor];
}

@end
