...
    [self addSubview:_lsStartCount];
    
    _lbLanguage = [UILabel new];
    [self addSubview:_lbLanguage];
    
    _btnOpenProjectHome = [UIButton new];
    _btnOpenProjectHome.accessibilityIdentifier = @"btn_project_home";
    [_btnOpenProjectHome setTitle:@"Project Home" forState:UIControlStateNormal];
    [_btnOpenProjectHome setTitleColor:[UIColor blueColor] forState:UIControlStateNormal];
    [_btnOpenProjectHome setTitleColor:[UIColor lightGrayColor] forState:UIControlStateHighlighted];
    [_btnOpenProjectHome addTarget:self action:@selector(openProjectInSafari) forControlEvents:UIControlEventTouchUpInside];
    [self addSubview:_btnOpenProjectHome];
    
...
