...
    _indicator.activityIndicatorViewStyle = UIActivityIndicatorViewStyleGray;
    _indicator.hidesWhenStopped = YES;
    _indicator.color = [UIColor grayColor];
    [self addSubview:_indicator];

    _tableView = [UITableView new];
    _tableView.accessibilityIdentifier = @"data_list";
    [self addSubview:_tableView];
    
    _bottomIndexView = [BottomIndexView new];
    [_bottomIndexView showDataWithCurrentPage:0 totalPage:0];
    [self addSubview:_bottomIndexView];
    
...
